# RogueRabbit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start_mcp_server.bat  start_rest.bat
docs/: index.md
docs/01-overview/: roadmap.md  vision.md
docs/02-architecture/: layers.md  module-map.md  principles.md
docs/03-harness/: agent-rules.md  verification-policy.md
docs/04-phases/: phase-1-learning.md  phase-2-usable.md  phase-3-production.md
docs/05-capabilities/: index.md
docs/06-specs/: README.md
docs/07-guides/: add-capability.md  llm-interaction-guide.md  local-dev.md  mcp-interaction-guide.md  memory-interaction-guide.md  permission-interaction-guide.md  rest-integration-guide.md  session-interaction-guide.md  skill-interaction-guide.md
docs/plans/: 2026-03-25-agent-foundation-design.md  2026-03-25-agent-foundation.md  2026-04-09-checkpoint-restore.md  2026-04-10-planning.md
docs/templates/: adr.md  capability-spec.md  iteration-checklist.md
notebooks/: 01_llm_basics.ipynb  02_mcp_basics.ipynb  03_rest_mcp_llm.ipynb  04_skill_basics.ipynb  05_session_basics.ipynb  06_memory_basics.ipynb  07_permission_basics.ipynb  08_logging_basics.ipynb  09_tracing.ipynb  10_debugging.ipynb  11_hook_basics.ipynb
src/rogue_rabbit/: __init__.py
src/rogue_rabbit/adapters/: __init__.py  glm_client.py  mcp_client.py  openai_client.py
src/rogue_rabbit/apps/: cli.py
src/rogue_rabbit/contracts/: __init__.py  hook.py  llm.py  log.py  mcp.py  memory.py  messages.py  permission.py  session.py  skill.py
src/rogue_rabbit/core/: __init__.py  authorizer.py  context_window.py  hook_manager.py  log_manager.py  memory_manager.py  react_agent.py  session_manager.py  skill_manager.py
src/rogue_rabbit/experiments/: 01_hello_llm.py  02_conversation.py  03_system_prompt.py  04_mcp_basic.py  05_mcp_with_llm.py  06_mcp_real.py  07_rest_mcp_llm.py  (+17 more)
tests/: test_project_layout.py
(+13 files in other folders)
