[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rogue-rabbit"
version = "0.2.0"
description = "Harness-oriented Python agent foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RogueRabbit" }
]
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
